--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.input-vehicle {
+  margin: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input-vehicle form input {
+  margin-right: 0.5rem;
+  padding: 0.2rem;
+  border-radius: 5px;
+  border: 1px solid rgb(87, 82, 82);
+}
+.input-vehicle form button {
+  margin-right: 0.5rem;
+  padding: 0.2rem;
+  border-radius: 5px;
+  color: rgb(110, 110, 138);
+  background-color: azure;
+  border: 1px solid rgb(189, 237, 237);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.listVehicle {
+  margin: 1rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-end;
+  align-content: space-evenly;
+}
+
+.item {
+  margin: 1rem;
+  padding: 1rem;
+  width: 20%;
+  height: 20%;
+  border-radius: 10px;
+  box-shadow: 31px 36px 28px -28px rgba(0, 0, 0, 0.39);
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.item button {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.editForm {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  align-content: space-evenly;
 }
 
-.App-link {
-  color: #61dafb;
+.editForm form {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: space-evenly;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.editForm form input {
+  margin-bottom: 0.7rem;
+  padding: 0.5rem;
+  text-align: center;
+  border-radius: 25px;
+}
+
+.editForm form button {
+  padding: 0.5rem;
+  text-align: center;
+  border-radius: 20px;
+  color: rgb(110, 110, 138);
+  background-color: azure;
+  border: 1px solid rgb(189, 237, 237);
 }
